hw9: project2: Modify Project 2 files to enable multi-threading in DfsSolver